--- a/juntagrico_variables.scss
+++ b/juntagrico_variables.scss
@@ -1,6 +1,7 @@
 $font-family-sans-serif:      "Source Sans Pro";
 $font-size-base:              1.125rem;
-$h5-font-size:                1.125rem;
+$h5-font-size:                0.875rem;
+$input-btn-font-size:         0.875rem;
 $btn-font-weight:             light;
 $dt-font-weight:              normal;
 $green:                       #66cc66;
