change primary color added instructions to compile css

--- a/juntagrico_variables.scss
+++ b/juntagrico_variables.scss
@@ -4,6 +4,7 @@ $h5-font-size:                0.875rem;
 $input-btn-font-size:         0.875rem;
 $btn-font-weight:             light;
 $dt-font-weight:              normal;
+$primary:                     #66cc66;
 $green:                       #66cc66;
 $yiq-contrasted-threshold:    162;
 $alert-border-radius:         5px;
